# fluentpython

./: README.md  pyproject.toml
01-data-model/: example-1.1.ipynb  example-1.2.ipynb  example_1_1_frenchdeck.py  example_1_2_vector.py
